--- a/README.Rmd
+++ b/README.Rmd
@@ -739,12 +739,13 @@ Overall, the **unikn** functions can be useful for solving color-related tasks a
 
 <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "140px" style = "width: 140px; float: right; border:10;"/>
 
-The **unikn** package is work in progress. We are still working on:
+The **unikn** package is work in progress. We are currently working on:
 
-- Additional themes for **ggplot2** that use the **unikn** color palettes    
-- Additional templates for images and slides  
+- Adding institutional color palettes 
+- Additional templates and themes (for plots and text decoration)   
    
-Please [contact us](https://www.spds.uni-konstanz.de/) in case you need additional features or want to help us implementing them.  
+Please comment on [GitHub](https://github.com/hneth/unikn) or [contact us](https://www.spds.uni-konstanz.de/) 
+if you need additional features or want to help creating them.  
 
 
 ## Resources
@@ -761,8 +762,9 @@ B. Online documentation:  | [Release version](https://hneth.github.io/unikn/)   
 
 ## Contact
 
-Please report any **unikn**-related issues at <https://github.com/hneth/unikn/issues>. 
-We appreciate your feedback, comments, or questions. 
+Please note and report any **unikn**-related issues at <https://github.com/hneth/unikn/issues>. 
+We are looking forward to your feedback, comments, or questions. 
+
 
 ## Copyrights 
 
