--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -37,21 +37,37 @@ knitr::opts_chunk$set(echo = TRUE,
 </a>
 
 The color palettes included in the **unikn** package are based on the CD\ manual of the [University of Konstanz](https://www.uni-konstanz.de/). 
-However, the functionality provided by the package makes it easy and straightforward to define and use **your own colors**. 
+However, the functionality provided by the package makes it easy and straightforward to define and use **your own colors**.  
+
 This vignette shows how the color-related tools of **unikn** can be used for **creating color palettes** for other purposes and institutions. 
 <!-- Main color info: --> 
-(For a general introduction of the  **unikn** colors, color palettes, and color functions, see the vignettes on [Colors and color functions](colors.html) and [Color recipes](color_recipes.Rmd). 
+(For a general introduction to the package's colors, color palettes, and color functions, see the vignettes on [Colors and color functions](colors.html) and [Color recipes](color_recipes.Rmd). 
 The vignette on [text](text.html) provides information on creating text boxes and decorations.) 
 
-Please install and/or load the **unikn** package to get started: 
+<!-- Collecting contributed color palettes: -->
+
+> Have you used **unikn** to create **your own color palettes**?  
+> If so, please **let us know** (e.g., but posting on this [GitHub issue](https://github.com/hneth/unikn/issues/11))!  
+>  
+> We collect color palettes from other institutions to make them available to R users in future versions of **unikn**.  
+>   
+> To enable us to verify and provide appropriate credit to your contributions, please provide us with the following information:  
+>   
+> 1. your code (e.g., the `newpal()` command creating your color palette),   
+> 2. your source (e.g., some URL with color definitions),   
+> 3. your name and some contact information (e.g., an Email address).  
+>  
+> We're looking forward to your contributions!  
+
+
+## Defining colors and color palettes 
+
+We install and load the **unikn** package to get started: 
 
 ```{r load-pkg-colors, message = FALSE, warning = FALSE}
 # install.packages('unikn')  # install unikn from CRAN client
 library('unikn')             # load the package
 ```
-
-
-## Defining colors and color palettes 
 
 The following examples show how to define color palettes (with dedicated color names) for three institutions. 
 They can be easily adapted to any other group, company, or entity, that uses some pre-defined set of colors. 
@@ -62,9 +78,12 @@ They can be easily adapted to any other group, company, or entity, that uses som
 ```
 
 ### A. [University of Freiburg](https://uni-freiburg.de/), Germany: 
+<a href="https://uni-freiburg.de/">
 <img src = "../inst/pix/logo_freiburg.png" align = "right" width = "120px" alt = "Uni Freiburg" style = "border:10;"/> 
+</a>
 
-The [Albert-Ludwigs Universität Freiburg](https://uni-freiburg.de/) provides fairly extensive information on its corporate color scheme (available [here](http://portal.uni-freiburg.de/cmsforum/wsg/webstyleguide/farben)). Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
+The [Albert-Ludwigs Universität Freiburg](https://uni-freiburg.de/) provides fairly extensive information on its corporate color scheme (available [here](http://portal.uni-freiburg.de/cmsforum/wsg/webstyleguide/farben)). Colors can be defined in a variety of ways, but R comes with convenient tools (like the `col2rgb()` and `convertColor()` functions of **grDevices**) to handle most cases. 
+The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
 As the [University of Freiburg](https://uni-freiburg.de/) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
 
 ```{r freiburg-cols, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
@@ -92,7 +111,7 @@ names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "
                               "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
 ```
 
-Alternatively, we can define both (colors and names) in one step by using the `newpal()` function:
+Alternatively, we can define both colors and names in one step by using the `newpal()` function:
 
 ```{r freiburg-newpal}
 pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
@@ -113,15 +132,18 @@ seecol(pal_freiburg_info, main = "Colors of the University of Freiburg")
 # seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
 
 # use in a demo plot:
-demopal(pal_freiburg_info, 
+demopal(pal_freiburg_info,
         type = 4, col_par = NA, seed = 79098, 
         main = "Colors of the University of Freiburg")
 ```
 
 ### B. [Princeton University](https://princeton.edu/), USA: 
+<a href="https://princeton.edu/">
 <img src = "../inst/pix/logo_princeton.jpg" align = "right" width = "180px" alt = "Princeton University" style = "border:10;"/>
+</a>
 
-The color scheme of [Princeton University](https://princeton.edu/) is easily recognized by its combination of orange with black and white elements. The official guidelines (available [here](https://communications.princeton.edu/guides-tools/logo-graphic-identity)) define "Princeton Orange" as Pantone (PMS) 158&nbsp;C. 
+The color scheme of [Princeton University](https://princeton.edu/) is easily recognized by its combination of orange with black and white elements. 
+The official guidelines (available [here](https://communications.princeton.edu/guides-tools/logo-graphic-identity)) define "Princeton Orange" as Pantone (PMS) 158\ C. 
 
 - The PANTONE&trade; color finder at <https://www.pantone.com/connect/158-C> yields the following color values:
 
@@ -129,7 +151,7 @@ The color scheme of [Princeton University](https://princeton.edu/) is easily rec
     - HEX/HTML: `#E87722`  
     - CMYK: `0 62 95 0`  
 
-- However, the guide also specifies and distinguishes between 2 additional versions of orange and provides the following HEX/HTML values for them:  
+- However, the guide also specifies and distinguishes between two additional versions of orange and provides the following HEX/HTML values for them:  
 
     - Orange on white: "#E77500"  
     - Orange on black: "#F58025"  
@@ -160,11 +182,13 @@ pal_princeton_2 <- newpal(col = c(orange_black, "black", "white"),
 
 # View color palette (with custom background color and title):
 seecol(pal_princeton_1,  # view color palette
-       col_bg = "grey90", main = "Color palette of Princeton University")
+       col_bg = "grey90", main = "Colors of Princeton University")
 ```
 
 ### C. [Max Planck Society](https://www.mpg.de/de), Germany: 
+<a href="https://www.mpg.de/">
 <img src = "../inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "150px" style = "border:10;"/>
+</a>
 
 The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institut-das-erscheinungsbild-der-max-planck-gesellschaft-4-ueberarbeitete-auflage.html)) of the [Max Planck Society](https://www.mpg.de/de) specifies the use of 2&nbsp;primary colors: 
 
