--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -46,8 +46,10 @@ The vignette on [text](text.html) provides information on creating text boxes an
 
 <!-- Collecting contributed color palettes: -->
 
+> **Call for contributions**
+>
 > Have you used **unikn** to create **your own color palettes**?  
-> If so, please **let us know** (e.g., but posting on this [GitHub issue](https://github.com/hneth/unikn/issues/11))!  
+> If so, please **let us know** (e.g., by posting on this [GitHub issue](https://github.com/hneth/unikn/issues/11))!  
 >  
 > We collect color palettes from other institutions to make them available to R users in future versions of **unikn**.  
 >   
@@ -57,7 +59,7 @@ The vignette on [text](text.html) provides information on creating text boxes an
 > 2. your source (e.g., some URL with color definitions),   
 > 3. your name and some contact information (e.g., an Email address).  
 >  
-> We're looking forward to your contributions!  
+> We're looking forward to your inputs and contributions!  
 
 
 ## Defining colors and color palettes 
