--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Institutional colors"
 author: "SPDS, uni.kn"
-date: "2022 10 18"
+date: "2022 10 20"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -92,31 +92,35 @@ As the [University of Freiburg](https://uni-freiburg.de/) kindly provides their 
 # Source: http://portal.uni-freiburg.de/cmsforum/wsg/webstyleguide/farben
 
 # Basic colors: ---- 
-pal_freiburg_bluered <- c("#004a99", "#c1002a")
-names(pal_freiburg_bluered) <- c("uni-blau", "uni-rot")
 
-pal_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
-names(pal_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
+uni_freiburg_blaurot <- c("#004a99", "#c1002a")
+names(uni_freiburg_blaurot) <- c("uni-blau", "uni-rot")
+
+uni_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
+names(uni_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
 
 # Web colors: ----
-pal_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
-names(pal_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
 
-pal_freiburg_grey <- c("#f2f3f1", "#e0e1dd", "#d5d6d2", "#c9cac8", 
+uni_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
+names(uni_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
+
+uni_freiburg_grey <- c("#f2f3f1", "#e0e1dd", "#d5d6d2", "#c9cac8", 
                        "#b2b4b3", "#9a9b9c", "#747678", "#363534")
-names(pal_freiburg_grey) <- c("grey-0", "grey-1", "grey-2", "grey-3", 
+names(uni_freiburg_grey) <- c("grey-0", "grey-1", "grey-2", "grey-3", 
                               "grey-5", "grey-7", "grey-9", "grey-font")
 
-pal_freiburg_info <- c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
+# Visualizations / illustrations: ----
+
+uni_freiburg_info <- c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
                        "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47")
-names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
+names(uni_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
                               "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
 ```
 
 Alternatively, we can define both colors and names in one step by using the `newpal()` function:
 
 ```{r freiburg-newpal}
-pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
+uni_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
                                     "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47"),
                             names = c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
                                       "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
@@ -129,15 +133,16 @@ Once a new color palette has been defined (in your current R\ environment), use 
 
 ```{r freiburg-seecol, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
 # View color palette:
-seecol(pal_freiburg_info, main = "Colors of the University of Freiburg")
-# seecol(pal_freiburg_basic, n = 7)  # extend color palette
-# seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
+seecol(uni_freiburg_info, main = "Colors of the University of Freiburg")
+# seecol(uni_freiburg_basic, n = 7)  # extend color palette
+# seecol(c(uni_freiburg_blue, "white", uni_freiburg_grey))  # mix color palette
 
 # use in a demo plot:
-demopal(pal_freiburg_info,
+demopal(uni_freiburg_info,
         type = 4, col_par = NA, seed = 79098, 
         main = "Colors of the University of Freiburg")
 ```
+
 
 ### B. [Princeton University](https://princeton.edu/), USA: 
 <a href="https://princeton.edu/">
@@ -153,39 +158,51 @@ The official guidelines (available [here](https://communications.princeton.edu/g
     - HEX/HTML: `#E87722`  
     - CMYK: `0 62 95 0`  
 
-- However, the guide also specifies and distinguishes between two additional versions of orange and provides the following HEX/HTML values for them:  
+- However, the guide also specifies and distinguishes between two additional versions of orange (depending on background color) and provides the following HEX/HTML values for them:  
 
     - Orange on white: "#E77500"  
     - Orange on black: "#F58025"  
 
 These definitions suggest defining three separate versions of orange and corresponding color palettes: 
 
-```{r princeton-cols, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
-# HEX values for 3 shades of orange: 
+```{r princeton-1, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+# 3 shades of orange: 
 orange_basic <- "#E87722"  # Pantone 158 C
-orange_white <- "#E77500"  # orange on white
-orange_black <- "#F58025"  # orange on black
+orange_white <- "#E77500"  # orange on white background
+orange_black <- "#F58025"  # orange on black background
 
 # Defining color palettes:
-pal_princeton <- c(orange_basic, "black")
-names(pal_princeton) <- c("orange", "black")
+uni_princeton <- c(orange_basic, "black")
+names(uni_princeton) <- c("orange", "black")
 
 # Define color palette and names (in 2 steps):
-pal_princeton_1 <- c(orange_white, "white", "black")
-names(pal_princeton_1) <- c("orange_w", "white", "black")
+uni_princeton_1 <- c(orange_white, "white", "black")
+names(uni_princeton_1) <- c("orange_w", "white", "black")
+```
 
-# Define both colors and names (in 1 step) by using the `newpal()` function:
-pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
+Again, we can define a palette of named colors in one step:
+
+```{r princeton-2, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+# Basic colors:
+uni_princeton_0 <- newpal(col = c(orange_basic, "black"),
+                          names = c("orange", "black"))
+
+# 1st color palette (on white backgrounds):
+uni_princeton_1 <- newpal(col = c(orange_white, "white", "black"),
                           names = c("orange_w", "white", "black"))
                           
-# Define 2nd color palette:
-pal_princeton_2 <- newpal(col = c(orange_black, "black", "white"), 
+# 2nd color palette (on black backgrounds):
+uni_princeton_2 <- newpal(col = c(orange_black, "black", "white"), 
                           names = c("orange_b", "black", "white"))
-
-# View color palette (with custom background color and title):
-seecol(pal_princeton_1,  # view color palette
-       col_bg = "grey90", main = "Colors of Princeton University")
 ```
+
+and then inspect a new color palette (with a custom background color and title):
+
+```{r princeton-3, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+seecol(uni_princeton_1, col_bg = "grey90", 
+       main = "Colors of Princeton University")
+```
+
 
 ### C. [Max Planck Society](https://www.mpg.de/de), Germany: 
 <a href="https://www.mpg.de/">
@@ -208,15 +225,15 @@ The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institu
 
 ```{r mpg-rgb-cols, echo = FALSE, eval = FALSE, fig.width = 6, fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # Using RGB values: 
-pal_mpg <- data.frame(# named colors: 
+mpg_pal <- data.frame(# named colors: 
   "mpg_green" = rgb( 17, 102,  86, maxColorValue = 255),
   "mpg_gray"  = rgb(221, 222, 214, maxColorValue = 255),
   "mpg_grey"  = rgb(208, 211, 212, maxColorValue = 255)
   )
-seecol(pal = list(pal_mpg))  # Ooops...
+seecol(pal = list(mpg_pal))  # Ooops...
 ```
 
-```{r mpg-hex-cols, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r mpg-hex-cols, echo = FALSE, eval = FALSE}
 # Using HEX values:
 mpg_green <- "#007367"
 mpg_grey  <- "#D0D3D4"
@@ -224,33 +241,29 @@ mpg_grey  <- "#D0D3D4"
 # col2rgb(mpg_green)
 # col2rgb(mpg_grey)
 
-pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
-# seecol(pal_mpg)
+mpg_pal <- usecol(pal = c(mpg_green, "white", mpg_grey))
+# seecol(mpg_pal)
 ```
 
-Again, the easiest way of defining a corresponding color palette is by defining vectors of colors and their names and then 
-use the `newpal()` function for creating a new color palette. 
-To allow for better color gradients, we insert the color\ `"white"` between the two\ dedicated colors: 
+Again, the easiest way of defining a corresponding color palette is by defining the elementary colors and then 
+combine them into a named color palette by using the `newpal()` function. 
+To enable color gradients, we insert the color\ `"white"` between the two\ dedicated colors: 
 
-```{r mpg-pal-def-vector, echo = FALSE, eval = FALSE, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
-pal_mpg <- c("#007367", "white", "#D0D3D4")
-names(pal_mpg) <- c("mpg green", "white", "mpg grey")
-# seecol(pal_mpg)
-```
-
-```{r mpg-pal-def-df, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
-# Define vectors:
-col_mpg <- c("#007367", "white", "#D0D3D4")     # color definition 
-col_lbl <- c("mpg green", "white", "mpg grey")  # color names
+```{r mpg-newpal}
+# Main colors (using HEX values):
+mpg_green <- "#007367"
+mpg_grey  <- "#D0D3D4"
 
 # Create new color palette (as a vector):
-pal_mpg <- newpal(col = col_mpg, names = col_lbl)
+mpg_pal <- newpal(col = c(mpg_green, "white", mpg_grey), 
+                  names = c("mpg green", "white", "mpg grey")
+                  )
 ```
 
-As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
+As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `mpg_pal` color palette: 
 
 ```{r mpg-seecol, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
-seecol(pal_mpg,
+seecol(mpg_pal,
        col_brd = "black", lwd_brd = 1, 
        main = "Colors of the Max Planck Society")
 ```
@@ -262,10 +275,10 @@ Once a new palette has been defined (and is available in your current R environm
 
 ```{r compare-custom-pals, eval = TRUE, fig.width = 5, fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
-# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1))
+# seecol(list(uni_freiburg_info, uni_freiburg_basic, mpg_pal, uni_princeton_1))
 
 # Scaled version: 
-seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9,
+seecol(list(uni_freiburg_basic, uni_princeton_1, mpg_pal, pal_unikn), n = 9,
        pal_names = c("Uni Freiburg", "Princeton Uni", "Max Planck", "Uni Konstanz"),
        main = "Comparing scaled color palettes")
 ```
