--- a/README.Rmd
+++ b/README.Rmd
@@ -822,14 +822,14 @@ We aim for an authentic representation of a highly-specified corporate design. W
 
 To support our development, please cite the **unikn** package when using it in publications or derivations:
 
-<!-- Citation (in APA format): -->
+<!-- Citation / reference (in APA format): -->
 
 - Neth, H., & Gradwohl, N., (2022). 
-unikn: Graphical elements of the University of Konstanz's corporate design. 
-Social Psychology and Decision Sciences, University of Konstanz, Germany.
-Computer software (R package version 0.6.0, September 20, 2022). 
+unikn: Graphical elements of the University of Konstanz's corporate design.  
+Social Psychology and Decision Sciences, University of Konstanz, Germany.  
+Computer software (R package version 0.6.0, September 20, 2022).  
 Retrieved from <https://CRAN.R-project.org/package=unikn>.   
-[https://doi.org/10.5281/zenodo.7096191](https://doi.org/10.5281/zenodo.7096191)
+doi\ [10.5281/zenodo.7096191](https://doi.org/10.5281/zenodo.7096191)  
 
 
 <!-- Copyrights of designs: -->
